--- a/themes/vanilla-bootstrap-hugo-theme/layouts/_default/baseof.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/_default/baseof.html
@@ -2,7 +2,8 @@
 {{ $lang := .Site.Language.Lang | default "en" }}
 <html lang="{{ $lang }}" class="h-100">
   {{ partial "head.html" . }}
-  <body class="d-flex flex-column h-100">
+  <body class="h-100">
+    <!-- Removed classes "d-flex flex-column" from body element 2019-01-25 -->
     {{ partial "nav.html" . }}
     <div class="container">
       <main id="main">
