--- a/themes/vanilla-bootstrap-hugo-theme/layouts/partials/date-and-tags.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/partials/date-and-tags.html
@@ -2,8 +2,8 @@
 {{ $dateFormat := .Site.Params.dateFormat | default "Jan 2, 2006" }}
 <i data-feather="calendar"></i> <time datetime="{{ $dateTime }}">{{ .PublishDate.Format $dateFormat }}</time>
 {{ with .Params.tags }}
-  <br>
-  <i data-feather="tag"></i>
+  <!-- <br> -->
+  <!-- <i data-feather="tag"></i> -->
   {{ range . }}
   {{ $href := print (absURL "tags/") (urlize .) }}
   <a class="btn btn-sm btn-outline-dark tag-btn" href="{{ $href }}">{{ . }}</a>
