--- a/themes/vanilla-bootstrap-hugo-theme/layouts/partials/nav.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/partials/nav.html
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">
-          <img src="images/header-logo-2.png" width="206" height="36" class="d-inline-block align-top" alt="">
+      <a class="navbar-brand" href="{{ "/" | absURL }}">
+          <img src="{{ "images/header-logo.svg" | absURL }}" width="206" height="36" class="d-inline-block align-top" alt="">
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggle navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navBarCollapse" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="collapse navbar-collapse" id="navBarCollapse">
           <div class="navbar-nav ml-auto">
               {{ $showActiveNav := .Site.Params.showActiveNav }}
               {{ $currentPage := . }}
