--- a/themes/vanilla-bootstrap-hugo-theme/layouts/index.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/index.html
@@ -12,41 +12,14 @@
   <h4>{{ .display_number }}</h4>
   <h5>{{ .title }}</h5>
   <p>{{ .blurb }}</p>
-  <p>{{ .image }}</p>
-  {{ $img := .image }}
-  <p>{{ $img }}</p>
-  {{ $imgpath := .image }}
-  {{ with $.Site.GetPage "page" "img/_index.md" }}
-      <p>{{ .Title }}</p>
-      {{ $resourcesArray := .Resources.ByType "image"}}
-      <p>{{$resourcesArray}}</p>
-      <p>{{ $img }}</p>
+  {{ $img := strings.TrimPrefix "/uploads/" .image }}
+  {{ with $.Site.GetPage "page" "uploads/_index.md" }}
       {{ with .Resources.GetMatch $img }}
             {{$img400 := .Fill "800x400 Center"}}
-            <img src="{{ $img400.RelPermalink }}">
+            <img class="test1" src="{{ $img400.RelPermalink }}">
         {{ end }}
   {{ end }}
 
-  {{ with .Site.GetPage "section" "img" }}
-    <h2>{{ .Title }}</h2>
-    {{ $resources := .Resources.ByType "image"}}
-    {{ range $resources }}
-      {{ with . }}
-        <img style="max-width: 100%;" src="{{ .RelPermalink }}">
-        <br />
-      {{ end }}
-    {{ end }}
-  {{ end }}
-
-  {{ with .Site.GetPage "section" "img" }}
-    {{ with .Resources.GetByPrefix $img }}
-      {{ $image200x := (.Resize "200x") }}
-      {{ $image400x := (.Resize "400x") }}
-      <img src="{{ $image200x.RelPermalink }}">
-      <img src="{{ $image400x.RelPermalink }}">
-      <br />
-    {{ end }}
-  {{ end }}
 {{ end }}
 
 
