--- a/themes/vanilla-bootstrap-hugo-theme/assets/scss/_bootstrap_variables.scss
+++ b/themes/vanilla-bootstrap-hugo-theme/assets/scss/_bootstrap_variables.scss
@@ -1,19 +1,25 @@
 $grid-breakpoints: (
   xs: 0,
-  sm: 576px,
+  sm: 480px,
   md: 768px,
-  lg: 992px,
-  xl: 1300px,
+  lg: 1280px,
+  xl: 1400px,
 );
 
 $container-max-widths: (
-  sm: 540px,
-  md: 720px,
-  lg: 960px,
-  xl: 1140px,
+  sm: 1280px,
 );
 
-$grid-gutter-width: 20px;
+$grid-gutter-width: 32px;
+
+// Specify gutter widths for different breakpoints
+
+$xl-grid-gutter-width: 40px;
+$lg-grid-gutter-width: 32px;
+$md-grid-gutter-width: 32px;
+$sm-grid-gutter-width: 24px;
+
+$jumbotron-padding: 0;
 
 $white: #ffffff;
 $black: #000000;
