--- a/themes/vanilla-bootstrap-hugo-theme/assets/scss/style.scss
+++ b/themes/vanilla-bootstrap-hugo-theme/assets/scss/style.scss
@@ -1,9 +1,6 @@
 // Font
 @import url('https://fonts.googleapis.com/css?family=Lato:400|Open+Sans:400,700');
-// TODO: Adobe Caslon
-// TODO: $brandongrotesque-bold
-// $brandongrotesque-med
-// $brandongrotesque-reg
+
 
 // Bootstrap
 @import 'bootstrap/functions';
@@ -42,15 +39,4 @@
 @import "bootstrap/carousel";
 @import "bootstrap/print";
 @import 'bootstrap/utilities';
-
-
-h1 {
-  font-family: $brandongrotesque-bold;
-}
-h2,
-h3,
-h4,
-h5,
-nav a {
-  font-family: $brandongrotesque-med;
-}
+@import 'dnd-custom';
