--- a/themes/vanilla-bootstrap-hugo-theme/layouts/_default/baseof.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/_default/baseof.html
@@ -4,13 +4,15 @@
   {{ partial "head.html" . }}
   <body class="h-100">
     <!-- Removed classes "d-flex flex-column" from body element 2019-01-25 -->
-    {{ partial "nav.html" . }}
-    <div class="container">
+
+    <div class="container parent">
+      {{ partial "nav.html" . }}
       <main id="main">
         {{ block "main" . }}{{ end }}
       </main>
+      {{ partial "footer.html" . }}
     </div>
-    {{ partial "footer.html" . }}
+
     {{ partial "script.html" . }}
     {{ partial "google-analytics-async.html" . }}
   </body>
