--- a/themes/vanilla-bootstrap-hugo-theme/layouts/index.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/index.html
@@ -6,24 +6,22 @@
   <h2 tabindex="0">{{ .Page.Params.subtitle }}</h2>
 </div>
 
-<h3>Objectives</h3>
-<div class="objectives">
-  {{ range .Site.Data.objectives }}
-  <h4>{{ .display_number }}</h4>
-  <h5>{{ .title }}</h5>
-  <p>{{ .blurb }}</p>
-  {{ $img := strings.TrimPrefix "/uploads/" .image }}
-  {{ with $.Site.GetPage "page" "uploads/_index.md" }}
-      {{ with .Resources.GetMatch $img }}
-            {{$img400 := .Fill "800x400 Center"}}
-            <img class="test1" src="{{ $img400.RelPermalink }}">
-        {{ end }}
-  {{ end }}
-
-{{ end }}
-
-
-
+<div class="row">
+  <h3>Objectives</h3>
+  <div class="objectives">
+    {{ range .Site.Data.objectives }}
+      <h4>{{ .display_number }}</h4>
+      <h5>{{ .title }}</h5>
+      <p>{{ .blurb }}</p>
+      {{ $img := strings.TrimPrefix "/uploads/" .image }}
+      {{ with $.Site.GetPage "page" "uploads/_index.md" }}
+          {{ with .Resources.GetMatch $img }}
+                {{$img400 := .Fill "800x400 Center"}}
+                <img class="test1" src="{{ $img400.RelPermalink }}">
+          {{ end }}
+      {{ end }}
+    {{ end }}
+  </div>
 </div>
 
 <h3>Upcoming Events</h3>
