--- a/themes/vanilla-bootstrap-hugo-theme/layouts/partials/nav.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/partials/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-md bg-white navbar-light">
       <a class="navbar-brand" href="{{ "/" | absURL }}">
           <img src="{{ "images/header-logo.svg" | absURL }}" width="206" height="36" class="d-inline-block align-top" alt="">
       </a>
