--- a/themes/vanilla-bootstrap-hugo-theme/layouts/partials/style.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/partials/style.html
@@ -1,5 +1,5 @@
 <style>
-.container {
+/* .container {
   max-width: {{ .Site.Params.containerMaxWidth | default "700px" | safeCSS }};
 }
 #nav a {
@@ -42,7 +42,7 @@ pre {
 pre code {
   padding: 0;
   font-size: inherit;
-  color: inherit; 
+  color: inherit;
   background-color: transparent;
   border-radius: 0;
 }
@@ -59,5 +59,5 @@ embed,
 video,
 audio {
   max-width: 100%;
-}
+} */
 </style>
