--- a/themes/vanilla-bootstrap-hugo-theme/layouts/partials/footer.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/partials/footer.html
@@ -3,11 +3,11 @@
   <div class="container">
     {{ .Site.Params.footerText | markdownify }}
     <div class="row contact-and-menu">
-      <div class="col-sm-4">
+      <div class="col-sm-12 col-md-4 col-lg-4">
         <h3 tabindex="0">Have questions?</h3>
         <h3 tabindex="0"><a href="#">Get in touch</a></h3>
       </div>
-      <div class="col-sm-8">
+      <div class="col-sm-12 col-md-8 col-lg-8">
         <div class="row">
           <div class="col">
             <ul class="menu">
@@ -26,18 +26,17 @@
       </div>
     </div>
     <div class="row social-and-copy">
-      <div class="col-sm">
+      <div class="col-sm-12 col-md-4">
         <!-- Social icons -->
         <a class="social-icon" href=""><i class="fab fa-facebook-f"></i></a>
         <a class="social-icon" href=""><i class="fab fa-twitter"></i></a>
-        <a class="social-icon" href=""><i class="fab fa-twitter"></i></a>
-        <a class="social-icon" href=""><i class="fab fa-twitter"></i></a>
-
+        <a class="social-icon" href=""><i class="fab fa-linkedin-in"></i></a>
+        <a class="social-icon" href=""><i class="fab fa-instagram"></i></a>
       </div>
-      <div class="col-sm">
+      <div class="col-sm-12 col-md-4 copy">
         &copy; 2018 Dignity + Debt. All rights reserved.
       </div>
-      <div class="col-sm">
+      <div class="col-sm-12 col-md-4 siteby">
         Site by <a href="https://www.hyperobjekt.com/" aria-haspopup="true" target="_blank">Hyperobject</a>
       </div>
     </div>
