--- a/themes/vanilla-bootstrap-hugo-theme/layouts/partials/nav.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/partials/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md bg-white sticky-top navbar-light">
-    <a class="navbar-brand" tabindex="0" aria-label="{{ .Site.Title }}" href="{{ "/" | absURL }}">
-        <img src="{{ "images/header-logo.svg" | absURL }}" width="206" height="36" class="d-inline-block align-top" alt="">
+    <a class="navbar-brand" tabindex="0" aria-level="1" aria-label="{{ .Page.Title }} at {{ .Site.Title }}" href="{{ "/" | absURL }}">
+        <!-- <img src="{{ "images/header-logo.svg" | absURL }}" width="206" height="36" class="d-inline-block align-top" alt="Dignity and Debt logo"> -->
     </a>
     <button class="navbar-toggle navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navBarCollapse" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -19,7 +19,7 @@
               {{ end }}
               <!-- {{ $icon := printf "<i data-feather=\"%s\"></i>" .Pre }} -->
               {{ $text := print .Name | safeHTML }}
-                  <a class="nav-item nav-link {{ $active }}" href="{{ .URL }}">{{ $text }}</a>
+                  <a class="nav-item nav-link {{ $active }}" tabindex="0" href="{{ .URL }}">{{ $text }}</a>
             {{ end }}
         </div>
     </div>
