--- a/themes/vanilla-bootstrap-hugo-theme/layouts/partials/head.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/partials/head.html
@@ -15,6 +15,8 @@
     {{ $style := resources.Get "scss/style.scss" | resources.ToCSS $options  }}
     <link rel="stylesheet" href="{{ ($style | minify | fingerprint).RelPermalink }}">
   {{ end }}
+  <link rel="shortcut icon" type="image/png" sizes="32x32" href="{{"images/faviconx32.png" | relURL}}">
+  <link rel="shortcut icon" type="image/png" sizes="16x16" href="{{"images/favicon.png" | relURL}}">
   <!-- TODO: Replace with Adobe Caslon Pro -->
   <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Lusitana|Radley" rel="stylesheet">
   <!-- font awesome for social icons in footer -->
