--- a/themes/vanilla-bootstrap-hugo-theme/layouts/partials/style.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/partials/style.html
@@ -1,17 +1,29 @@
 <style>
-  .home .parent {
-    {{ $img := strings.TrimPrefix "/uploads/" .Page.Params.hero_image }}
-    {{ with $.Site.GetPage "page" "uploads/_index.md" }}
-      {{ with .Resources.GetMatch $img }}
-        {{$img1280 := .Fill "1280x640 Center"}}
+{{ $img := strings.TrimPrefix "/uploads/" .Page.Params.hero_image }}
+{{ with $.Site.GetPage "page" "uploads/_index.md" }}
+  {{ with .Resources.GetMatch $img }}
+    {{$img1280 := .Fill "1280x640 TopLeft"}}
+    @media (min-width: 769px) {
+      .home.scroll-top nav {
         background-image: url('{{ $img1280.RelPermalink }}');
-        background-color: rgba(10, 61, 95, 0.5);
+        background-color: rgba(10, 61, 95, 0.5) !important;
         background-blend-mode: multiply;
         background-size: 1280px 640px;
         background-repeat: no-repeat;
-      {{ end }}
-    {{ end }}
-  }
+      }
+    }
+    #home-jumbotron {
+      background-image: url('{{ $img1280.RelPermalink }}');
+      background-color: rgba(10, 61, 95, 0.5);
+      background-blend-mode: multiply;
+      background-position: 0 -68px;
+      background-size: 1280px 640px;
+      background-repeat: no-repeat;
+    }
+  {{ end }}
+{{ end }}
+
+
 /* .container {
   max-width: {{ .Site.Params.containerMaxWidth | default "700px" | safeCSS }};
 }
