who we are section and custom botton type

--- a/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
+++ b/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
@@ -21,11 +21,17 @@ h1 {
   font-family: $brandongrotesque-bold;
 }
 h2,
+div.h2,
 h3,
 h4,
 h5,
 nav a {
   font-family: $brandongrotesque-med;
+}
+
+h2,
+div.h2 {
+
 }
 
 h3 {
@@ -55,7 +61,7 @@ nav.navbar-light {
     background-image: url("/images/header-logo.svg");
     height: 68px;
     width: 206px;
-    background-position: 0 18px;
+    background-position: 0 15px;
     background-repeat: no-repeat;
   }
 
@@ -212,22 +218,15 @@ body.home {
   .jumbotron {
     height: 572px;
 
-    .col-5 {
-      position: relative;
-      height: auto;
-      left: 12rem;
-      top: 24rem;
-    }
-
     img {
       width: 308px;
       height: 54px;
     }
 
-    h2 {
+    div.h2 {
       font-family: $brandongrotesque-med;
       color: $white;
-      width: 43.1rem;
+      // width: 43.1rem;
       font-size: 2.4rem;
       line-height: 3.0rem;
       margin-top: 3.2rem;
@@ -236,6 +235,27 @@ body.home {
 
   #main {
     background-color: $white;
+  }
+
+  .col-intro {
+    position: relative;
+    height: auto;
+    top: 24rem;
+  }
+
+  @include media-breakpoint-up(sm) {
+    .col-intro {
+      left: 6rem;
+      div.h2 {
+        width: 43.1rem;
+      }
+    }
+  }
+
+  @include media-breakpoint-up(md) {
+    .col-intro {
+      left: 12rem;
+    }
   }
 
   &.scroll-top {
@@ -257,6 +277,101 @@ body.home {
   }
 }
 
+// WHO WE ARE
+h3.who-we-are {
+  text-transform: uppercase;
+  font-family: $brandongrotesque-bold;
+  font-size: 2.8rem;
+  line-height: 3.6rem;
+  padding-top: 6.4rem;
+  padding-bottom: 4.8rem;
+  text-align: center;
+}
+
+.container.parent > #main > .row.who-we-are {
+  margin-left: 3.6rem;
+  margin-right: 3.6rem;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+
+  @include media-breakpoint-up(md) {
+    justify-content: flex-start;
+  }
+
+  img.flex-child {
+    margin-right: 0;
+    flex: 0 0 2.96rem;
+
+    @include media-breakpoint-up(sm) {
+      margin-right: 24px;
+    }
+
+    @include media-breakpoint-up(lg) {
+      margin-right: 32px;
+    }
+
+    @include media-breakpoint-up(xl) {
+      margin-right: 40px;
+    }
+  }
+
+  .text.flex-child {
+    flex: 1 1 3.6rem;
+    min-width: 360px;
+    font-family: $brandongrotesque-med;
+    font-size: 2.2rem;
+    line-height: 2.8rem;
+    margin-top: 4.8rem;
+
+    @include media-breakpoint-up(md) {
+      margin-top: 0;
+    }
+  }
+
+  .col {
+    text-align: center;
+    .btn-custom {
+      margin-top: 7.2rem;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+}
+
+
+// Custom button style
+.btn-custom {
+    display: inline-block;
+    // font-weight: 400;
+    font-family: $brandongrotesque-bold;
+    font-size: 18px;
+    color: $darkblue;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    user-select: none;
+    width: 167px;
+    height: 53px;
+    border: 4px solid $darkblue;
+    padding-top: 1rem;
+    border-radius: 0;
+    box-shadow: 6px 6px 0 $darkblue;
+    // padding: 0.375rem 0.75rem;
+    // font-size: 1rem;
+    // line-height: 1.6;
+    // border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    //
+    &:active,
+    &:hover {
+      box-shadow: 5.5px 5.5px 0 $darkblue;
+      transform: translate(1px, 1px);
+      color: $darkblue;
+    }
+}
+
+// Sticky top fix for safari
 .sticky-top {
   @supports (position: sticky) or (position: -webkit-sticky) {
     position: -webkit-sticky;
@@ -265,6 +380,67 @@ body.home {
     z-index: $zindex-sticky;
   }
 }
+
+// Custom gutter widths
+@include media-breakpoint-up(sm) {
+  .row {
+    margin-left: 12px;
+    margin-right: 12px;
+  }
+  .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col, .col-auto, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm, .col-sm-auto, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md, .col-md-auto, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg, .col-lg-auto, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl, .col-xl-auto {
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+}
+
+@include media-breakpoint-up(md) {
+  .row {
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+  .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col, .col-auto, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm, .col-sm-auto, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md, .col-md-auto, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg, .col-lg-auto, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl, .col-xl-auto {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
+
+@include media-breakpoint-up(lg) {
+  .row {
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+  .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col, .col-auto, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm, .col-sm-auto, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md, .col-md-auto, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg, .col-lg-auto, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl, .col-xl-auto {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
+
+@include media-breakpoint-up(xl) {
+  .row {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col, .col-auto, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm, .col-sm-auto, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md, .col-md-auto, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg, .col-lg-auto, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl, .col-xl-auto {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
+.row .col {
+  // box-sizing: content-box;
+}
+//
+.flex-parent {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+
+.flex-child {
+  flex: 0 1 auto;
+}
+
+
 
 // About
 // News
