--- a/themes/vanilla-bootstrap-hugo-theme/assets/scss/_bootstrap_variables.scss
+++ b/themes/vanilla-bootstrap-hugo-theme/assets/scss/_bootstrap_variables.scss
@@ -10,14 +10,25 @@ $container-max-widths: (
   sm: 1280px,
 );
 
-$grid-gutter-width: 32px;
+$grid-columns:               12 !default;
+$grid-gutter-width-base:     32px !default;
+$grid-gutter-widths: (
+  xs: $grid-gutter-width-base,
+  sm: $grid-gutter-width-base,
+  md: $grid-gutter-width-base,
+  lg: $grid-gutter-width-base,
+  xl: $grid-gutter-width-base
+) !default;
 
-// Specify gutter widths for different breakpoints
-
-$xl-grid-gutter-width: 40px;
-$lg-grid-gutter-width: 32px;
-$md-grid-gutter-width: 32px;
-$sm-grid-gutter-width: 24px;
+// $grid-gutter-width-base: 32px;
+//
+// $grid-gutter-widths: (
+//   xs: 24px,
+//   sm: 24px, // 30px
+//   md: $grid-gutter-width-base, // 30px
+//   lg: $grid-gutter-width-base, // 30px
+//   xl: 40px,  // 30px
+// );
 
 $jumbotron-padding: 0;
 
